<resources>
    <string name="app_name">GADS Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard_text">LEADERBOARD</string>
    <string name="submit_text">Submit</string>
    <string name="project_submission_text">Project Submission</string>
    <string name="confirmation_text">Are you sure</string>
    <string name="yes_text">Yes</string>
    <string name="submission_successful_text">Submission Successful</string>
    <string name="submission_not_successful_text">Submission not Successful</string>
    <string name="email_address_hint_text">Email Address</string>
    <string name="project_on_github_link_hint_text">Project on GITHUB (link)</string>
    <string name="submit_button_text">Submit</string>
    <string name="last_name_hint_text">Last Name</string>
    <string name="first_name_hint_text">First Name</string>
    <string name="internet_connection_message">Umm, please check your internet connection.</string>
</resources>