<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black"
    tools:context=".ui.main.projectsubmission.ProjectSubmissionFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:navigationIcon="@drawable/ic_arrow_back">

        <ImageView
            android:id="@+id/google_africa_header_image"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginStart="64dp"
            android:src="@drawable/gads_header" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/project_submission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/project_submission_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_divider_background"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_submission_text"
        app:layout_constraintVertical_bias="0" />


    <EditText
        android:id="@+id/first_name_text_field"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/submission_edit_text_background"
        android:hint="@string/first_name_hint_text"
        android:paddingStart="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/last_name_text_field"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/last_name_text_field"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/submission_edit_text_background"
        android:hint="@string/last_name_hint_text"
        android:paddingStart="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/first_name_text_field"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/email_address_text_field"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/submission_edit_text_background"
        android:hint="@string/email_address_hint_text"
        android:paddingStart="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name_text_field"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/github_url_text_field"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/submission_edit_text_background"
        android:hint="@string/project_on_github_link_hint_text"
        android:paddingStart="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address_text_field"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/submission_button_background"
        android:text="@string/submit_button_text"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_url_text_field" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/form_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="submit_button, project_submission_text, email_address_text_field, last_name_text_field, first_name_text_field" />

</androidx.constraintlayout.widget.ConstraintLayout>